--- a/dotfiles/.config/starship/archive/starship_3l.toml
+++ b/dotfiles/.config/starship/archive/starship_3l.toml
@@ -1,13 +1,7 @@
 format = """
-[╭─────── ](bold #769ff0)$os$directory$package$git_branch$git_status$fill$cmd_duration$time[───────╮ ](bold #769ff0)
-[╰───](bold #769ff0)$character"""
-
-right_format = '[ ❮───╯](bold #769ff0)'
-add_newline = true
-
-[fill]
-symbol = ' '
-style = 'bold black'
+[┌──────────────](bold #769ff0)$character$git_branch$git_status
+[│](bold #769ff0) $os$directory$package
+[└─](bold #769ff0)$character"""
 
 [os]
 format = '[$symbol]($style)(os.sympols)'
@@ -16,44 +10,30 @@ disabled = false
 
 [character]
 success_symbol = '[❯](bold #769ff0)'
-error_symbol = '[✕](bold #FF8787)'
+error_symbol = '[❯](bold #FF8787)'
 
 [directory]
-style = "fg:#769ff0"
+style = "fg:#00E5FF"
 format = "[ $path ]($style)(read_only)(read_only_style)"
 truncation_length = 3
 truncation_symbol = ".../"
-read_only = "󰌾 "
-read_only_style = "fg:#FF6B6B"
-home_symbol = "  ~"
+read_only = " 󰌾"
+read_only_style = "fg:yellow"
 
 [directory.substitutions]
 "Documents" = " 󰈙  "
 "Downloads" = "   "
 "Music" = "   "
 "Pictures" = "   "
-"Desktop" = "   "
-"Movies" = "   "
 
 [git_branch]
-symbol = '[  ](fg:#0db9d7)'
+symbol = "  "
 style = ""
-format = '[[ $symbol $branch ](fg:#00E5FF)]($style)'
+format = '[[ $symbol $branch ](fg:#8CCF7E)]($style)'
 
 [git_status]
-# style = "bold fg:"
-format = '[($all_status$ahead_behind )]($style)'
-conflicted = '[=](#f7768e)'
-ahead = '[⇡${count}](#7aa2f7)'
-behind = '[⇣${count}](#FFAA66)'
-diverged = '[⇕${count}](#CBA6F7)'
-up_to_date = '[](#8CCF7E)'
-untracked = '[?${count}](#FFD580)'
-stashed = '[${count}](#A099FF)'
-modified = '[!${count](#00B7EB)}'
-staged = '[+${count}](#8CCF7E)'
-renamed = '[»${count}](#1793D1)'
-deleted = '[✘${count}](#f7768e)'
+style = ""
+format = '[[ $symbol $branch ](fg:#8CCF7E)]($style)'
 
 [nodejs]
 symbol = ""
@@ -75,17 +55,11 @@ symbol = ""
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
-[cmd_duration]
-disabled = false
-min_time = 2_000
-style = "fg:#00E5FF"
-format = '[$duration  ]($style)'
-
 [time]
 disabled = false
-time_format = "%R"              # Hour:Minute Format
-style = "fg:#769ff0"
-format = '[ $time   ]($style)'
+time_format = "%R"                                      # Hour:Minute Format
+style = "bg:#1d2230"
+format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
 
 [package]
 symbol = "󰏗 "
