--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 .gitconfig
-.config/nvim/lua/archive/
-.config/yazi/bookmark
+dotfiles/.config/yazi/bookmark
 *.bak
-.DS_Store
+dotfiles/.oh-my-zsh/custom/plugins
+dotfiles/.oh-my-zsh/custom/themes
